Update index.html adicionando verificacao do google

--- a/project-center/index.html
+++ b/project-center/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="qLvuISomR0bXYIP7APiZOtfFq6NTC7s660gwoEH2g3I" />
     <title>Gabriel Costa - Tech Specialist</title>
     <link rel="stylesheet" href="Src/Css/style.css">
     <link rel="stylesheet" href="Src/Css/reset.css">
@@ -64,4 +65,5 @@
     </div>
     </footer>
 </body>
+
 </html>
